fix: ajustes de código para melhor legibilidade

--- a/frontend/src/app/components/crud/crud.component.scss
+++ b/frontend/src/app/components/crud/crud.component.scss
@@ -1,12 +1,12 @@
-@use 'app/styles/theme.scss' as theme;
-@use '@angular/material' as mat;
+@use 'app/styles/theme.scss'as theme;
+@use '@angular/material'as mat;
 
 .add-button {
   display: flex;
   justify-content: flex-start;
   padding: 1rem;
 
-  & > button {
+  &>button {
     min-width: 20rem;
 
     @media screen and (max-width: 768px) {
@@ -140,7 +140,7 @@ th {
   justify-content: flex-end;
   transition: opacity 0.3s ease-in-out;
 
-  & > button > mat-icon {
+  &>button>mat-icon {
     align-items: center;
     display: flex;
     justify-content: center;
@@ -164,6 +164,14 @@ th {
   display: flex;
   justify-content: center;
   padding: 1rem;
+}
+
+.active {
+  color: var(--success-color);
+}
+
+.inactive {
+  color: grey;
 }
 
 .delete {
