--- a/frontend/src/app/components/not-found-register/not-found-register.component.scss
+++ b/frontend/src/app/components/not-found-register/not-found-register.component.scss
@@ -23,8 +23,7 @@
 }
 
 .description {
-  font-size: 0.8rem;
+  font-size: 1rem;
   margin-bottom: 2rem;
   color: var(--text-color);
-  font-style: italic;
 }
