--- a/frontend/src/app/styles/theme.scss
+++ b/frontend/src/app/styles/theme.scss
@@ -1,9 +1,8 @@
-// This file was generated by running 'ng generate @angular/material:theme-color'.
-// Proceed with caution if making changes to this file.
-
 @use 'sass:map';
-@use '@angular/material' as mat;
+@use '@angular/material'as mat;
 
+$primary: #0393BE;
+$secondary: #0DBF87;
 $success: #23BF6A;
 $warning: #FFB946;
 $danger: #F16F6F;
@@ -15,10 +14,26 @@ $separator: #C7C7C7;
 $textColor: #4D4D4D;
 $hover: #C4C4C44D;
 
+// Primary Color
+$primaryDark: #03759B;
+$primaryLight: #03D0FD;
+
+// Secondary Color
+$secondaryDark: #079A5C;
+$secondaryLight: #B6ECDB;
+
+// Error Color
+$errorDark: #A63535;
+$errorLight: #F16F6F;
+
+// Greys
+$greyMain: #4D4D4D;
+$greyLight: #808080;
+$greyVeryLight: #A2A2A2;
+$greyDark: #1A1A1A;
+
 // Note: Color palettes are generated from primary: #0393BE, secondary: #0DBF87, tertiary: #5f78bf
-$_palettes: (
-  primary: (
-    0: #000000,
+$_palettes: (primary: (0: #000000,
     10: #001F2A,
     20: #003547,
     25: #004156,
@@ -35,8 +50,7 @@ $_palettes: (
     99: #FAFCFF,
     100: #FFFFFF,
   ),
-  secondary: (
-    0: #000000,
+  secondary: (0: #000000,
     10: #002114,
     20: #003825,
     25: #00452E,
@@ -53,8 +67,7 @@ $_palettes: (
     99: #F4FFF6,
     100: #FFFFFF,
   ),
-  tertiary: (
-    0: #000000,
+  tertiary: (0: #000000,
     10: #00184A,
     20: #0A2C6F,
     25: #1A377B,
@@ -71,8 +84,7 @@ $_palettes: (
     99: #FEFBFF,
     100: #FFFFFF,
   ),
-  neutral: (
-    0: #000000,
+  neutral: (0: #000000,
     10: #171C1F,
     20: #2C3134,
     25: #373C3F,
@@ -99,8 +111,7 @@ $_palettes: (
     94: #EAEEF2,
     96: #F0F4F8,
   ),
-  neutral-variant: (
-    0: #000000,
+  neutral-variant: (0: #000000,
     10: #131D22,
     20: #283237,
     25: #333D42,
@@ -117,8 +128,7 @@ $_palettes: (
     99: #FAFCFF,
     100: #FFFFFF,
   ),
-  error: (
-    0: #000000,
+  error: (0: #000000,
     10: #410002,
     20: #690005,
     25: #7E0007,
@@ -137,8 +147,7 @@ $_palettes: (
   ),
 );
 
-$_rest: (
-  neutral: map.get($_palettes, neutral),
+$_rest: (neutral: map.get($_palettes, neutral),
   neutral-variant: map.get($_palettes, neutral-variant),
   error: map.get($_palettes, error),
 );
@@ -154,18 +163,18 @@ $_tertiary: map.merge(map.get($_palettes, tertiary), $_rest);
 
 
 $light-theme: mat.define-theme((color: (theme-type: light,
-  primary: $_primary,
-  tertiary: $_tertiary,
-  use-system-variables: true,
-),
-  typography: (use-system-variables: true,
-  ),
-));
+      primary: $_primary,
+      tertiary: $_tertiary,
+      use-system-variables: true,
+    ),
+    typography: (use-system-variables: true,
+    ),
+  ));
 $dark-theme: mat.define-theme((color: (theme-type: dark,
-  primary: $_primary,
-  tertiary: $_tertiary,
-  use-system-variables: true,
-),
-  typography: (use-system-variables: true,
-  ),
-));
+      primary: $_primary,
+      tertiary: $_tertiary,
+      use-system-variables: true,
+    ),
+    typography: (use-system-variables: true,
+    ),
+  ));
